--- a/src/components/Rules.css
+++ b/src/components/Rules.css
@@ -1,7 +1,7 @@
-footer {
-  display: flex;
-}
 .btn-rules {
+  position: fixed;
+  left: calc(50% - 75px);
+  bottom: 20px;
   width: 150px;
   text-transform: uppercase;
   background-color: inherit;
@@ -14,4 +14,26 @@ footer {
   font-size: 1.2rem;
   letter-spacing: 2px;
   margin: 20px auto;
+}
+
+.rules {
+  position: relative;
+}
+
+.modal {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: white;
+  width: 100%;
+  height: 100vh;
+  font-size: 2.5rem;
+}
+
+.hidden {
+  display: none;
 }
