--- a/src/components/Rules.css
+++ b/src/components/Rules.css
@@ -21,10 +21,13 @@
 }
 
 .modal {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  align-items: center;
+  display: grid;
+  grid-template-areas:
+    "head"
+    "rules-image"
+    "close-icon";
+  text-align: center;
+  padding-top: 40px;
   position: fixed;
   top: 0;
   left: 0;
@@ -32,6 +35,36 @@
   width: 100%;
   height: 100vh;
   font-size: 2.5rem;
+}
+
+.rules__head {
+  grid-area: head;
+}
+
+.rules-img-container {
+  grid-area: rules-image;
+}
+
+.close-icon-container {
+  grid-area: close-icon;
+}
+
+@media screen and (min-width: 1000px) {
+  .modal {
+    grid-template-columns: 1fr 5fr 1fr;
+    grid-template-rows: 2fr 10fr;
+    grid-template-areas:
+      "head . close-icon"
+      ". rules-image .";
+    width: 40rem;
+    height: 25rem;
+    border-radius: 10px;
+    padding: 30px;
+    top: 50%;
+    left: 50%;
+    translate: -50% -50%;
+    border: 2px solid gray;
+  }
 }
 
 .hidden {
