--- a/src/components/Rules.css
+++ b/src/components/Rules.css
@@ -65,6 +65,12 @@
     translate: -50% -50%;
     border: 2px solid gray;
   }
+
+  .btn-rules {
+    position: fixed;
+    bottom: 20px;
+    right: -20rem;
+  }
 }
 
 .hidden {
